--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,24 @@
 h1 {
     color: red;
 }
+
+.header {
+    background-image: url(../img/header-background.png);
+}
+
+.figma-logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+nav {
+    display: flex;
+    
+
+}
+
+.icons {
+    display: flexbox;
+    
+}
