--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,16 @@
 h1 {
-    color: red;
+    color: var(--title-text-color);
+    text-align: center;
+}
+
+.title__text {
+    color: var(--title-text-color);
+    text-align: center;
 }
 
 .header {
     background-image: url(../img/header-background.png);
+    background-size: cover;
 }
 
 .figma-logo {
