--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,8 +1,8 @@
 button {
     color: #fff;
     padding: 18px 32px;
-    font-weight: 600;
+    font-weight: 300;
     font-size: 18px;
     border-radius: 30px;
-    background: #3A86FF;
+    background: #3681fa;
 }
