add min-height into .header

--- a/css/header.css
+++ b/css/header.css
@@ -13,6 +13,7 @@ h1 {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    min-height: 800px;
 
 }
 
